src/objects/AllowReopenOpptyAndAccountChange__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Req#1446,2256 --&gt; Contains the list of users that require special access of reopening closed opportunity or Changing Account name after G2</description>
    <fields>
        <fullName>Allow_Accountname_and_EndCustomer_change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req # 2256 : Allows the user to change Account Name and End customer after passing G2</description>
        <label>Allow Accountname and EndCustomer change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Reopening_of_Closed_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req # 1446 : If the value is true, it will allow the user to reopen closed opportunity.</description>
        <label>Allow Reopening of Closed opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>Allow Reopen Oppty and Account Change</label>
</CustomObject>